<resources>
    <string name="app_name">Job Management Sheet</string>
    <string name="signIn">Login</string>
    <string name="signUp">Register</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="username_or_email">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_current_location">Location</string>
    <string name="title_activity_client_navigation">DASHBOARD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="where_are_you">Where are you?</string>
    <string name="request_job">REQUEST JOB</string>
    <string name="title_activity_search_place">Map</string>
</resources>
